--- a/README.adoc
+++ b/README.adoc
@@ -1,76 +1,55 @@
 = LOTUS: a curated naturaL prOducTs occUrrences databaSe
 
 = Overview
-
 *LOTUS* actually, consists of XXX'XXX referenced structure - organism pairs, collected and curated among 34 open databases (DB).
 It represents the most exhaustive open DB of natural products (NP).
 It encompasses XXX'XXX distinct sanitized structures in XX’XXX resolved organisms.
 Within the frame of current computational approaches to guide NP’s research, all these elements should allow a more complete understanding of organisms and their metabolites.
 
 == Data Availability Statements
-
 The data used to support the findings of this study have been deposited in the XXX Dataverse repository ([DOI or OTHER PERSISTENT IDENTIFIER]).
 An snapshot of the repository at the time of publication is also available.
 
 == Dataset list
+All data used for this study is listed under xref:dataset.adoc[dataset.adoc]
 
-include::dataset.adoc[]
+// see if include it directly in case: // include::dataset.adoc[]
 
 == Computational requirements
 
-see <https://social-science-data-editors.github.io/guidance/template-README.html>
-
-=== Software Requirements
-
-=== Memory and Runtime Requirements
-
-== Description of programs
-
-=== Instructions
-
-=== Details
-
-== List of tables and programs
-
-== References
-
-== Acknowledgments
-
-- Hat tip to anyone whose code was used
-- Inspiration
-- etc.
-
-== Flowchart
-image:flowchart.png[flowchart]
-
-== Getting Started
-
-These instructions will get you a copy of the project up and running on your local machine for development and testing purposes.
-
-=== Prerequisites
-
 You need:
 
+- R
+- python
 - Git
 - link:https://www.dvc.org[DVC]
-- gnfinder (see how to install)
-- gnverify (see how to install)
+- link:https://github.com/gnames/gnfinder[gnfinder]
+- link:https://github.com/gnames/gnverify[gnverify]
 
 - If you want to be able to use the xref:src/2_curating/2_editing/reference/1_translating/pubmed.R[PMID translation script] with less limitations and it to work correctly, you have to set an API key as described in the following link:https://cran.r-project.org/web/packages/rentrez/vignettes/rentrez_tutorial.html[vignette]
 
 - You need to have access to the metabomaps server to be able to pull the data, if you don't you will have to pull all the DBs data
 from scratch.
 
+== Description of programs
+// see if flowchat is enough, update
+image:flowchart.png[flowchart]
+
+=== Instructions
+
+=== Details
+
+== Getting Started
+These instructions will get you a copy of the project up and running on your local machine for development and testing purposes.
+
 === Access to metabomaps
-
 Add this to your
-
-[source,console]
+[source]
 ----
 ~/.ssh/config
 ----
 
-[source,console]
+[source]
 ----
 Host metabomaps
   IdentityFile /home/<user_local>/.ssh/id_rsa_metabomaps
@@ -80,7 +59,6 @@ Host metabomaps
 ----
 
 === Pull the repository
-
 [source,console]
 ----
 git pull https://gitlab.unige.ch/Adriano.Rutz/opennaturalproductsdb.git
@@ -90,20 +68,16 @@ dvc pull  // This will take a while
 ----
 
 === Having the data in a different place
-
 If you want to have the data in a different place (for example for running a test), you can set the environment variable **DATA_PATH**.
 
 === If you want to build only a simple DB
-
 [source,console]
 ----
 make -C src/1_gathering/db -B alkamid
 ----
 
 === Use docker to build
-
 Install docker on your machine, make sure it is on your path
-
 then
 
 [source,console]
@@ -117,7 +91,6 @@ This will bring you in a container that will already have all the dependencies i
 === Packages
 
 ==== Conda environement
-
 A "loose" environment.yml file is created and should allow to recreate a working env formthe project without beeing too restrictive on the versions to install. Install it by running in the home directory.
 
 We will also create another environment for strict mirroring of the installed packages. (TO DO)
@@ -143,12 +116,10 @@ cd src
 If you are using Visual Studio be sure to set your R path in the settings option to reflect your created conda environment.
 
 == Minimal working example
-
 A minimal working example containing XXX entries coming from various DB's is proposed.
 Use this example to check if all steps are running correctly on your machine.
 
 == Molconvert issue
-
 At the moment, we use molconvert (commercial) for structure to chemical name conversion. Since we cannot disseminate it, you won't be able to proceed to the translation except if you modify following variables in src/paths.R accordingly:
 
 [source,console]
@@ -158,7 +129,6 @@ molconvertPath <- adapt_path_to // "~/../../Applications/MarvinSuite/bin/molconv
 ----
 
 == To build the flowchart
-
 [source,console]
 ----
 yarn global add @mermaid-js/mermaid-cli
@@ -167,7 +137,6 @@ mmdc -i flowchart.mmd -o flowchart.png --width 2700 --height 900
 ----
 
 == To build a graph from the make
-
 (
   Requires remake and gprof2dot <https://github.com/jrfonseca/gprof2dot>
 )
@@ -179,37 +148,36 @@ gprof2dot -f callgrind callgrind.out.50802 | dot -Tpng -o output_full.png
 ----
 
 === Description
-
 The minimal working example file contains following columns:
 
 == TO UPDATE 1
-
 Give an example
 
 === Final output
-
 If everything went well, the output of the minimal working example should be:
 
 == TO UPDATE 2
-
 Give an example
 
 == Explanations
-
 Add additional notes
 
 == Contributing
-
 Please read xref:CONTRIBUTING.md[contributing] for details on our code of conduct, and the process for submitting pull requests to us.
 
 == Authors
-
 - *Adriano Rutz* - _Initial work_ - link:https://gitlab.unige.ch/Adriano.Rutz[Adriano.Rutz]
 - *Pierre-Marie Allard* - _Investigator_ - link:https://gitlab.unige.ch/Pierre-Marie.Allard[Pierre-Marie.Allard]
 - *Jonathan Bisson* - _Hacker in Chief_ - link:https://gitlab.unige.ch/bjo[bjo]
 
 See also the list of link:https://gitlab.unige.ch/Adriano.Rutz/opennaturalproductsdb/-/project_members[contributors] who participated in this project.
 
-## License
+== References
 
+== Acknowledgments
+- Hat tip to anyone whose code was used
+- Inspiration
+- etc.
+
+== License
 This project is licensed under the GNU GPLv3 license - see the xref:LICENSE.md[license file] for details
